--- a/static/index.html
+++ b/static/index.html
@@ -8,6 +8,11 @@
     <link rel="shortcut icon" type="image/png" href="./src/images/favicon.png"/>
     <link rel="stylesheet" type="text/css" href="dist/bundle.css"/>
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
+    <script src="https://www.paypalobjects.com/api/checkout.js"></script>
+    <script src="https://js.braintreegateway.com/js/braintree-2.32.1.min.js"></script>
+    <script src="https://checkout.stripe.com/checkout.js"></script>
+
+
 
 </head>
 
@@ -16,5 +21,6 @@
 </body>
 
 <script src="dist/bundle.js"></script>
+
 
 </html>
